# Actix-web

./: Cargo.toml
backend/: .env  Cargo.toml  diesel.toml  docker-compose.yml
backend/migrations/: schema.rs
backend/src/: config.rs  db.rs  main.rs  models.rs
backend/src/api/: posts.rs  users.rs
src/: config.rs  handler.rs  schema.rs  services.rs  utils.rs
